--- a/reg.html
+++ b/reg.html
@@ -125,6 +125,12 @@
         <label for="contact">Contact Number</label>
         <input type="tel" id="contact" name="contact" required>
 
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="confirm-password">Confirm Password</label>
+        <input type="password" id="confirm-password" name="confirm_password" required>
+
         <button type="submit">Register</button>
     </form>
     <footer>&copy; 2024 DormEase | Your Hostel Companion</footer>
