--- a/forg.html
+++ b/forg.html
@@ -109,7 +109,7 @@
 
 <div class="form-container">
     <h2>Email Verification</h2>
-    <form action="new.html" method="post">
+    <form action="new.html" method="get">
         <label for="email">Enter your email</label>
         <input type="email" id="email" name="email" required>
         <input type="submit" value="Submit">
