--- a/gym.html
+++ b/gym.html
@@ -3,44 +3,130 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gym Timings</title>
+<title>DormEase | Gym Timings</title>
 <style>
-    table {
-        width: 80%;
-        margin: 20px auto;
-        border-collapse: collapse;
-    }
-    th, td {
-        border: 1px solid #ddd;
-        padding: 8px;
+    body {
+        font-family: Arial, sans-serif;
+        background: #f5f6fa;
+        margin: 0;
+        padding: 0;
         text-align: center;
     }
+
+    header {
+        background: #1e3a5f;
+        color: white;
+        padding: 15px 0;
+        font-size: 22px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    nav {
+        margin: 15px 0;
+    }
+
+    nav a {
+        text-decoration: none;
+        color: #1e3a5f;
+        font-weight: bold;
+        margin: 0 12px;
+        font-size: 16px;
+    }
+
+    nav a:hover {
+        color: #5a2bbf;
+        text-decoration: underline;
+    }
+
+    h2 {
+        color: #1e3a5f;
+        margin: 20px 0;
+    }
+
+    table {
+        width: 85%;
+        max-width: 600px;
+        margin: 0 auto 20px auto;
+        border-collapse: collapse;
+        background: white;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1);
+    }
+
+    th, td {
+        padding: 12px 15px;
+        text-align: center;
+        border-bottom: 1px solid #ddd;
+        font-size: 16px;
+    }
+
     th {
-        background-color: #f2f2f2;
+        background-color: #1e3a5f;
+        color: #fff;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
+
+    tr:hover {
+        background-color: #f1f1f1;
+    }
+
+    footer {
+        background: #1e3a5f;
+        color: white;
+        padding: 10px 0;
+        font-size: 14px;
+        margin-top: 20px;
     }
 </style>
 </head>
 <body>
 
-<h2 align="center">GYM TIMINGS</h2>
+<header>DormEase</header>
 
-<table >
-  <tr>
-    <th>TIME SLOT</th>
-    <th>TIMINGS</th>
-  </tr>
-  <tr>
-    <td>MORNING</td>
-    <td>6:00 AM to 9:00 AM</td>
-  </tr>
-  <tr>
-    <td>MIDDAY</td>
-    <td>11:00 AM to 1:00 PM</td>
-  </tr>
-  <tr>
-    <td>EVENING</td>
-    <td>4:00 PM to 9:00 PM</td>
-  </tr>
+<nav> 
+  <a href="ht1.html">Home</a>
+  <a href="example1.html">Room Booking</a> 
+  <a href="image1.html">Mess Timings</a>
+   <a href="img2.html">Mess Menu</a> 
+   <a href="img1.html">Laundry Timings</a>
+    <a href="templetimings.html">Temple Timings</a>
+     <a href="compl.html">Complaint Box</a>
+     <a href="contact.html">Contact</a>
+ </nav>
+
+<h2>Gym Timings</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Time Slot</th>
+      <th>Timings</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Morning</td>
+      <td>6:00 AM - 9:00 AM</td>
+    </tr>
+    <tr>
+      <td>Midday</td>
+      <td>11:00 AM - 1:00 PM</td>
+    </tr>
+    <tr>
+      <td>Evening</td>
+      <td>4:00 PM - 9:00 PM</td>
+    </tr>
+  </tbody>
 </table>
+
+<footer>&copy; 2024 DormEase | Stay Fit, Stay Healthy</footer>
+
 </body>
 </html>
