--- a/ht1.html
+++ b/ht1.html
@@ -34,6 +34,24 @@
         backdrop-filter: blur(4px);
         z-index: -1;
     }
+    .logout-btn {
+    position: fixed;      /* Fixes it relative to the viewport */
+    top: 10px;            /* Distance from top of the page */
+    right: 10px;          /* Distance from right of the page */
+    background-color: #ff4b5c;
+    color: white;
+    text-decoration: none;
+    padding: 10px 18px;
+    font-size: 14px;
+    border-radius: 5px;
+    font-weight: 600;
+    z-index: 9999;        /* Ensures it stays above other elements */
+    transition: background 0.3s ease;
+}
+
+.logout-btn:hover {
+    background-color: #e04352;
+}
 
     header {
         background: rgba(255, 255, 255, 0.65);
@@ -164,6 +182,8 @@
 </style>
 </head>
 <body>
+    <a href="py4.html" class="logout-btn">Logout</a>
+
 <div class="overlay"></div>
 
 <header>
@@ -178,8 +198,9 @@
     <a href="img2.html">Mess Menu</a>
     <a href="img1.html">Laundry Timings</a>
     <a href="gym.html">Gym Timings</a>
-    <a href="templetimings.png">Temple Timings</a>
+    <a href="templetimings.html">Temple Timings</a>
     <a href="compl.html">Complaint Box</a>
+    <a href="contact.html">Contact</a>
 </nav>
 
 <script>
