--- a/image1.html
+++ b/image1.html
@@ -3,50 +3,163 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Meal Timings</title>
+<title>DormEase | Mess Timings</title>
 <style>
-    table {
-        width: 80%;
-        margin: 20px auto;
-        border-collapse: collapse;
-    }
-    th, td {
-        border: 1px solid #ddd;
-        padding: 8px;
+    body {
+        font-family: Arial, sans-serif;
+        background: #f5f6fa;
+        margin: 0;
+        padding: 0;
         text-align: center;
     }
-    th {
-        background-color: #f2f2f2;
+
+    header {
+        background: #1e3a5f;
+        color: white;
+        padding: 15px 0;
+        font-size: 22px;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
     }
+
+    nav {
+        margin: 15px 0;
+    }
+
+    nav a {
+        text-decoration: none;
+        color: #1e3a5f;
+        font-weight: bold;
+        margin: 0 12px;
+        font-size: 16px;
+    }
+
+    nav a:hover {
+        color: #5a2bbf;
+        text-decoration: underline;
+    }
+
+    h2 {
+        color: #1e3a5f;
+        margin: 20px 0;
+    }
+
+    table {
+        width: 85%;
+        max-width: 700px;
+        margin: 0 auto 20px auto;
+        border-collapse: collapse;
+        background: white;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1);
+    }
+
+    th, td {
+        padding: 12px 15px;
+        text-align: center;
+        border-bottom: 1px solid #ddd;
+        font-size: 16px;
+    }
+
+    th {
+        background-color: #1e3a5f;
+        color: #fff;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
+
+    tr:hover {
+        background-color: #f1f1f1;
+    }
+footer {
+    background: #1e3a5f;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+
+    position: fixed;    /* Fixes footer at bottom */
+    bottom: 0;          /* Bottom of viewport */
+    left: 0;            /* Full width */
+    width: 100%;
+    z-index: 1000;      /* Stays on top */
+}
+
+      .logout-btn {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #ff4b5c;
+    color: white;
+    text-decoration: none;
+    padding: 8px 16px;
+    font-size: 14px;
+    border-radius: 5px;
+}
+
+.logout-btn:hover {
+    background-color: #e04352;
+}
 </style>
 </head>
 <body>
 
-<h2 align="center">MESS TIMINGS</h2>
+<header>
+    DORMEASE
+    <a href="py4.html" class="logout-btn">Logout</a>
+</header>
+
+
+<nav>
+  <a href="ht1.html">Home</a>
+    <a href="example1.html">Room Booking</a>
+    <a href="img2.html">Mess Menu</a>
+    <a href="img1.html">Laundry Timings</a>
+    <a href="gym.html">Gym Timings</a>
+    <a href="templetimings.html">Temple Timings</a>
+    <a href="compl.html">Complaint Box</a>
+    <a href="contact.html">Contact</a>
+</nav>
+
+<h2>Mess Timings</h2>
 
 <table>
-  <tr>
-    <th>Day</th>
-    <th>Breakfast</th>
-    <th>Lunch</th>
-    <th>Tea</th>
-    <th>Dinner</th>
-  </tr>
-  <tr>
-    <td>Monday to Saturday</td>
-    <td>7:30 AM to 9:30 AM</td>
-    <td>12:00 PM to 1:30 PM</td>
-    <td>4:30 PM to 6:00 PM</td>
-    <td>7:30 PM to 9:00 PM</td>
-  </tr>
-  <tr>
-    <td>Sunday and Holidays</td>
-    <td>7:30 AM to 9:30 AM</td>
-    <td>12:30 PM to 2:00 PM</td>
-    <td>4:30 PM to 6:00 PM</td>
-    <td>7:30 PM to 9:00 PM</td>
-  </tr>
+  <thead>
+    <tr>
+      <th style="width:20%;">Day</th>
+      <th style="width:20%;">Breakfast</th>
+      <th style="width:20%;">Lunch</th>
+      <th style="width:20%;">Tea</th>
+      <th style="width:20%;">Dinner</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="white-space: nowrap;">Monday - Saturday</td>
+      <td style="white-space: nowrap;">7:30 AM - 9:30 AM</td>
+      <td style="white-space: nowrap;">12:00 PM - 1:30 PM</td>
+      <td style="white-space: nowrap;">4:30 PM - 6:00 PM</td>
+      <td style="white-space: nowrap;">7:30 PM - 9:00 PM</td>
+    </tr>
+    <tr>
+      <td style="white-space: nowrap;">Sunday & Holidays</td>
+      <td style="white-space: nowrap;">7:30 AM - 9:30 AM</td>
+      <td style="white-space: nowrap;">12:30 PM - 2:00 PM</td>
+      <td style="white-space: nowrap;">4:30 PM - 6:00 PM</td>
+      <td style="white-space: nowrap;">7:30 PM - 9:00 PM</td>
+    </tr>
+  </tbody>
 </table>
+
+
+<footer>&copy; 2024 DormEase | Hostel Mess Service</footer>
 
 </body>
 </html>
