--- a/img1.html
+++ b/img1.html
@@ -3,54 +3,178 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Laundry Information</title>
+<title>DormEase | Laundry Timings</title>
 <style>
-    table {
-        width: 80%;
-        margin: 20px auto;
-        border-collapse: collapse;
+    body {
+        font-family: Arial, sans-serif;
+        background: #f5f6fa;
+        margin: 0;
+        padding: 0;
+        text-align: center;
     }
+
+    header {
+        background: #1e3a5f;
+        color: white;
+        padding: 15px 0;
+        font-size: 22px;
+        font-weight: bold;
+        text-transform: uppercase;
+        position: relative;
+    }
+
+    nav {
+        margin: 15px 0;
+    }
+
+    nav a {
+        text-decoration: none;
+        color: #1e3a5f;
+        font-weight: bold;
+        margin: 0 12px;
+        font-size: 16px;
+    }
+
+    nav a:hover {
+        color: #5a2bbf;
+        text-decoration: underline;
+    }
+
+    h2 {
+        color: #1e3a5f;
+        margin: 20px 0;
+    }
+
+    table {
+        width: 85%;
+        max-width: 700px;
+        margin: 0 auto 20px auto;
+        border-collapse: collapse;
+        background: white;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1);
+        font-size: 16px;
+    }
+
     th, td {
-        border: 1px solid #ddd;
-        padding: 8px;
+        padding: 12px 15px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+
+    th {
+        background-color: #1e3a5f;
+        color: #fff;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
+
+    ul {
+        margin: 0;
+        padding-left: 20px;
         text-align: left;
     }
-    th {
-        background-color: #f2f2f2;
+
+    /* Make cells wider */
+    th:first-child, td:first-child {
+        width: 35%;  /* Category column */
+        white-space: nowrap;
+    }
+
+    th:last-child, td:last-child {
+        width: 65%;  /* Details column */
+        white-space: nowrap;
+    }
+
+    footer {
+        background: #1e3a5f;
+        color: white;
+        text-align: center;
+        padding: 10px 0;
+        font-size: 14px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1000;
+    }
+
+    .logout-btn {
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: #ff4b5c;
+        color: white;
+        text-decoration: none;
+        padding: 8px 16px;
+        font-size: 14px;
+        border-radius: 5px;
+    }
+
+    .logout-btn:hover {
+        background-color: #e04352;
     }
 </style>
 </head>
 <body>
 
-<h2 align="center">LAUNDRY TIMINGS</h2>
+<header>
+    DORMEASE
+    <a href="py4.html" class="logout-btn">Logout</a>
+</header>
+
+<nav>
+  <a href="ht1.html">Home</a>
+  <a href="example1.html">Room Booking</a>
+  <a href="image1.html">Mess Timings</a>
+  <a href="img2.html">Mess Menu</a>
+  <a href="gym.html">Gym Timings</a>
+  <a href="templetimings.html">Temple Timings</a>
+  <a href="complaint.html">Complaint Box</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<h2>Laundry Timings</h2>
 
 <table>
-  <tr>
-    <th>Category</th>
-    <th>Details</th>
-  </tr>
-  <tr>
-    <td>Laundry Room Location</td>
-    <td>The laundry room is located on the ground floor of the main hostel building, next to the common area.</td>
-  </tr>
-  <tr>
-    <td>Operating Hours (Monday to Friday)</td>
-    <td>8:00 AM to 10:00 PM</td>
-  </tr>
-  <tr>
-    <td>Operating Hours (Saturday and Sunday)</td>
-    <td>9:00 AM to 11:00 PM</td>
-  </tr>
-  <tr>
-    <td>Machine Availability</td>
-    <td>
+  <thead>
+    <tr>
+      <th>Category</th>
+      <th>Details</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Laundry Room Location</td>
+      <td>The laundry room is located on the ground floor of the main hostel building, next to the common area.</td>
+    </tr>
+    <tr>
+      <td>Operating Hours (Mon - Fri)</td>
+      <td>8:00 AM - 10:00 PM</td>
+    </tr>
+    <tr>
+      <td>Operating Hours (Sat & Sun)</td>
+      <td>9:00 AM - 11:00 PM</td>
+    </tr>
+    <tr>
+      <td>Machine Availability</td>
+      <td>
         <ul>
-            <li>3 Washing Machines</li>
-            <li>3 Dryers</li>
+          <li>3 Washing Machines</li>
+          <li>3 Dryers</li>
         </ul>
-    </td>
-  </tr>
+      </td>
+    </tr>
+  </tbody>
 </table>
+
+<footer>&copy; 2024 DormEase | Laundry Service</footer>
 
 </body>
 </html>
