--- a/templetimings.html
+++ b/templetimings.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mess Menu | DormEase</title>
+<title>Temple Timings</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -65,7 +65,7 @@
 
     th {
         background-color: #1e3a5f;
-        color: white;
+        color: #fff;
         font-weight: bold;
         text-transform: uppercase;
     }
@@ -92,7 +92,7 @@
     z-index: 1000;      /* Stays on top */
 }
 
-    .logout-btn {
+      .logout-btn {
     position: absolute;
     right: 20px;
     top: 50%;
@@ -117,75 +117,68 @@
     <a href="py4.html" class="logout-btn">Logout</a>
 </header>
 
-<nav>
-    <a href="ht1.html">Home</a>
-    <a href="example1.html">Room Booking</a>
-    <a href="image1.html">Mess Timings</a>
-    <a href="img1.html">Laundry Timings</a>
-    <a href="gym.html">Gym Timings</a>
-    <a href="templetimings.html">Temple Timings</a>
-    <a href="compl.html">Complaint Box</a>
-    <a href="contact.html">Contact</a>
-</nav>
 
-<h2>Mess Menu</h2>
+<nav> 
+    <a href="ht1.html">Home</a>
+    <a href="example1.html">Room Booking</a> 
+  <a href="image1.html">Mess Timings</a>
+   <a href="img2.html">Mess Menu</a> 
+   <a href="img1.html">Laundry Timings</a>
+    <a href="gym.html">Gym Timings</a> 
+     <a href="compl.html">Complaint Box</a>
+     <a href="contact.html">Contact</a>
+ </nav>
+
+<h2>Daily Temple Schedule</h2>
 
 <table>
   <thead>
     <tr>
-      <th>Day</th>
-      <th>Breakfast</th>
-      <th>Lunch</th>
-      <th>Dinner</th>
+      <th>Ritual</th>
+      <th>Time</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>Monday</td>
-      <td>Idli & Sambar</td>
-      <td>Rice, Dal, Veg Curry</td>
-      <td>Chapati & Paneer Curry</td>
+      <td>Temple Opens</td>
+      <td>5:30 AM</td>
+      <td>Temple opens for devotees</td>
     </tr>
     <tr>
-      <td>Tuesday</td>
-      <td>Dosa & Chutney</td>
-      <td>Rice, Rasam, Veg Fry</td>
-      <td>Chicken Curry & Rice</td>
+      <td>Morning Abhisheka</td>
+      <td>6:00 AM - 6:30 AM</td>
+      <td>Holy bath of the deity with water, milk, and honey</td>
     </tr>
     <tr>
-      <td>Wednesday</td>
-      <td>Poha & Upma</td>
-      <td>Rice, Dal, Veg Curry</td>
-      <td>Chapati & Egg Curry</td>
+      <td>Morning Aarti</td>
+      <td>7:00 AM</td>
+      <td>Devotional prayers with lamps</td>
     </tr>
     <tr>
-      <td>Thursday</td>
-      <td>Poori & Curry</td>
-      <td>Rice, Sambar, Veg Curry</td>
-      <td>Fish Curry & Rice</td>
+      <td>Noon Abhisheka</td>
+      <td>12:00 PM - 12:30 PM</td>
+      <td>Midday ritual bath and offerings</td>
     </tr>
     <tr>
-      <td>Friday</td>
-      <td>Idli & Chutney</td>
-      <td>Rice, Dal, Fry</td>
-      <td>Paneer Curry & Chapati</td>
+      <td>Evening Aarti</td>
+      <td>5:30 PM</td>
+      <td>Evening prayers and lamp lighting</td>
     </tr>
     <tr>
-      <td>Saturday</td>
-      <td>Masala Dosa</td>
-      <td>Biryani & Raita</td>
-      <td>Dal Tadka & Rice</td>
+      <td>Special Pooja</td>
+      <td>7:00 PM</td>
+      <td>Offerings of fruits and flowers to the deity</td>
     </tr>
     <tr>
-      <td>Sunday</td>
-      <td>Pancakes & Honey</td>
-      <td>Rice, Sambar, Veg Curry</td>
-      <td>Chicken Fry & Chapati</td>
+      <td>Temple Closes</td>
+      <td>8:00 PM</td>
+      <td>Temple closes for the day</td>
     </tr>
   </tbody>
 </table>
 
-<footer>&copy; 2024 DormEase | Hostel Mess Service</footer>
+<footer>&copy; 2025 Vishnu Temple | Devotion & Peace</footer>
 
 </body>
 </html>
