--- a/gym.html
+++ b/gym.html
@@ -27,24 +27,41 @@
         width: 100%;
         text-align: center;
     }
+nav {
+    margin: 15px 0;
+    text-align: center;
+    flex-wrap: wrap;
+}
 
-    nav {
-        margin: 15px 0;
-        text-align: center;
-    }
+nav a {
+    text-decoration: none; /* Remove underline */
+    color: #1e3a5f;
+    font-weight: bold;
+    margin: 0 12px;
+    font-size: 16px;
+    padding: 10px 18px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+    display: inline-block;
+}
 
+nav a:hover {
+    background-color: #1e3a5f;
+    color: #fff;
+}
+
+nav a:active,
+nav a:focus {
+    text-decoration: none; /* Keep underline removed on click/focus */
+}
+
+@media screen and (max-width: 768px) {
     nav a {
-        text-decoration: none;
-        color: #1e3a5f;
-        font-weight: bold;
-        margin: 0 12px;
-        font-size: 16px;
+        display: block;   /* Stack links vertically */
+        margin: 8px 0;
     }
+}
 
-    nav a:hover {
-        color: #5a2bbf;
-        text-decoration: underline;
-    }
 
     .content-container {
         display: flex;
